--- a/default.css
+++ b/default.css
@@ -138,55 +138,16 @@ ul{
 #profile_pic{
     display: block;
     margin: 0 auto;
-    height: 200px;
     width: 200px;
     object-fit: cover;
     border:2px solid var(--borderColor)
-}
-
-#theme-options-wrapper{
-    display:flex;
-    justify-content: center;
-}
-
-.theme-dot{
-    height:30px;
-    width: 30px;
-    background-color: black;
-    margin: 5px;
-    border: 2px solid var(--themeDotBorder);
-    border-radius: 50%;
-    -webkit-box-shadow: -1px 1px 3px -1px rgba(0,0,0,0.75);
-    -moz-box-shadow: -1px 1px 3px -1px rgba(0,0,0,0.75);
-    box-shadow: -1px 1px 3px -1px rgba(0,0,0,0.75);
-    cursor: pointer;
-}
-
-.theme-dot:hover{
-    border-width: 5px;
-}
-
-#light-mode{
-    background-color: #fff;
-}
-
-#blue-mode{
-    background-color: #192734;
-}
-
-#green-mode{
-    background-color: #78866b ;
-}
-
-#purple-mode{
-    background-color: #7E4C74;
 }
 
 #setting-note{
     font-size:12px;
     font-style: italic;
     text-align: center;
-}
+} */
 
 .right-column{
     grid-area:right-column;
