--- a/default.css
+++ b/default.css
@@ -33,6 +33,10 @@ h4 {font-size: 24px;}
 h5 {font-size: 20px;}
 h6 {font-size: 16px;}
 
+h1 {
+    margin-bottom: 0;
+}
+
 a{
     text-decoration: none;
     color:#17a2b8;
